Added support for defining template variables directly into templates with ability to override them through options

--- a/templates/icons-as-vars.scss.hbs
+++ b/templates/icons-as-vars.scss.hbs
@@ -1,3 +1,5 @@
+namePrefix: icon-
+---
 {{#icons}}
-${{../prefix}}{{name}}: '{{../chars.backslash}}{{code}}';
+${{../namePrefix}}{{name}}: '{{../chars.backslash}}{{code}}';
 {{/icons}}
